--- a/src/App.css
+++ b/src/App.css
@@ -23,7 +23,8 @@
 .progress-box {
   background-color: burlywood;
   width: 400px;
-  height: 100px;
+  height: max-content;
+  min-height: 100px;
 
   border-radius: 15px;
 }
@@ -31,8 +32,8 @@
 /* WeeklyGraph CSS */
 .weekly-graph-box {
   width: 400px;
-  height: 100px;
-  background-color: darkgoldenrod;
+  height: max-content;
+  background-color: burlywood;
 
   border-radius: 15px;
 }
