--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,7 @@
 }
 
 body {
-  background-color: #2C3639;
+  background-color: white !important;
 }
 
 /* Dashboard CSS */
@@ -18,6 +18,13 @@ body {
   flex-direction: column;
   align-items: center;
   gap: 20px;
+}
+
+.holder {
+  height: 400px;
+  width: max-content;
+
+  background-color: gray;
 }
 
 /* YearlyProgress CSS */
@@ -50,4 +57,82 @@ body {
   width: 200px;
   justify-content:space-between;
   display: flex;
+}
+
+/* Login CSS */
+
+h1 {
+  color: #DCD7C9 !important;
+}
+
+.text {
+  color: #DCD7C9;
+  width:fit-content;
+}
+
+.password-requirements {
+  color:red;
+  font-size: 16px;
+}
+.login-holder {
+  width: 400px;
+  height: fit-content;
+  background-color: #A27B5C;
+  text-align: left;
+  padding: 20px;
+  padding-top: 10px;
+}
+
+.login-cluster {
+  width: 300px;
+  height: 300px;
+  background-color: #A27B5C;
+  margin-left: 10px;
+  margin-top: 10px;
+  text-align: left;
+  padding: 10px;
+}
+
+.button-cluster {
+  background-color: transparent;
+  justify-content: space-between;
+  display: flex;
+  width: 130px;
+  height: fit-content;  
+  margin-left: auto;
+}
+
+.spacer {
+  height: 15px;
+}
+
+
+.input {
+  background-color: #DCD7C9;
+}
+
+.sButton {
+  background-color: #3F4E4F;
+  border-color: #3F4E4F;
+  color: #DCD7C9;
+}
+.sButton:hover {
+  background-color: #DCD7C9;
+  border-color: #DCD7C9;
+  color:#3F4E4F
+}
+
+.sButton:focus {
+  background-color: #3F4E4F !important;
+  border-color: #3F4E4F !important;
+}
+
+
+/* My Books */
+.holdBooks {
+  display: flex;
+  flex-direction: column;
+  width: 80vw;
+  position: relative;
+  margin-left: calc(-20vw + 15%);
 }
