--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #2C3639;
+  background-color: white;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -28,7 +28,20 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
-  background-color: #2C3639 !important;
+  background-color: #333 !important;
+  
+   /* This allows scrolling */
+   overflow: auto;
+
+   /* Hide scrollbar in Firefox */
+   scrollbar-width: none;
+ 
+   /* Hide scrollbar in WebKit (Chrome, Safari) */
+   -ms-overflow-style: none;  /* IE and Edge */
+}
+
+body::-webkit-scrollbar {
+  display: none;  /* Hide scrollbar for Chrome, Safari, Opera */
 }
 
 h1 {
